--- a/paper/implementation.tex
+++ b/paper/implementation.tex
@@ -47,11 +47,12 @@ Each chunk belonging to one node is further divided into two parts, one for smal
 
 \paragraph{Cache Warmup Mechanism} For small objects, \NM{} also borrows the cache warmup mechanism of TcMalloc~\cite{tcmalloc}. TcMalloc utilizes the \texttt{mmap} system call to obtain multiple pages (depending on the class size) from the OS each time, when it is running out of the memory for one size class. For such a memory block, TcMalloc adds all objects of this block into the freelist at one time. Since TcMalloc utilizes the first word of each object as the pointer for the freelist, this mechanism warms up the cache by referencing the first word of each object during the adding operation. According to our observation, this warmup mechanism improves the performance of one application (\texttt{raytrace}) by 10\%. Based on our understanding, the performance improvement is caused by data prefetches, since adding objects to the freelist has a simple and predictable pattern. \NM{} employs a similar mechanism for small objects with the size less than 256 bytes, and adds all objects inside a page to the freelist. A bump pointer is used to track the position of never-used objects, whose updates do not require to be exactly one page each time. By comparison, TcMalloc may waste some memory in the end of each block, if the block size is not equal to multiple times of the class size.   
 
-\subsection{Interleaved and Block-wise Memory Allocation for Shared Objects} 
+\subsection{Interleaved Heap} 
 \label{sec:mainthread}
 
-\NA{} proposed a new interleaved and block-wise heap for shared objects, as illustrated in Fig.~\ref{fig:overview}. Based on our observation, most NUMA performances issues identified by existing NUMA profilers are related to shared objects~\cite{XULIU, MemProf}. Shared objects are typically allocated in the main thread, but are accessed concurrently by multiple children threads later. Allocating the physical memory for shared objects in one node may introduce load imbalance issue, and therefore causing significant number of remote accesses. Therefore, \NA{} reserves a range of memory for shared objects, called as ``Interleaved Heap'' in Fig.~\ref{fig:overview}. \NA{} utilizes the \texttt{mbind} system call to specify that the physical pages of this range will be allocated from all nodes interleavedly. This design helps balance the volume of memory accesses of all memory controllers, reducing interconnect congestion and load imbalance. 
+\NA{} proposed a new interleaved  heap for shared objects. Based on our observation, most NUMA performances issues identified by existing NUMA profilers are related to shared objects~\cite{XULIU, MemProf}. Shared objects are typically allocated in the main thread, but are accessed concurrently by multiple children threads later. Allocating the physical memory for shared objects in one node may introduce load imbalance issue, and therefore causing significant number of remote accesses. Therefore, \NA{} reserves a range of memory for shared objects, called as ``Interleaved Heap'' in Fig.~\ref{fig:overview}. \NA{} utilizes the \texttt{mbind} system call to specify that the physical pages of this range will be allocated from all nodes interleavedly. This design helps balance the volume of memory accesses of all memory controllers, reducing interconnect congestion and load imbalance. 
 
+\begin{comment}
 \begin{wrapfigure}{r}{0.6\textwidth}
 \centering
 \includegraphics[width=3in]{figure/blockwise}
@@ -59,6 +60,8 @@ Each chunk belonging to one node is further divided into two parts, one for smal
 \caption{Block-wise Memory Allocation\label{fig:blockwise}}
 \vspace{-0.1in}
 \end{wrapfigure}
+\end{comment}
+
 \NA{} allocates the memory in a block-wise way for shared objects, when the size of an allocation is larger than the twice of the multiplication of nodes and the page size. The basic idea of block-wise allocation is illustrated in Fig.~\ref{fig:blockwise}. The key reason to use the block-wise allocation is that children threads may access the memory continuously~\cite{XULIU}. In addition to that, the block-wise allocation will still maintain the balance between different memory nodes, which won't cause unnecessary performance issue. 
  
 During the implementation, \NA{} only allocates shared objects from the main thread in the interleaved heap. Although it may benefit the performance if shared objects allocated in children threads are also using the interleaved heap, especially for applications with the pipeline model, the overhead of tracking shared objects is typically larger than the performance benefit based on our evaluation. 
@@ -80,7 +83,7 @@ However, the default huge page support is not good for the performance~\cite{Gau
 
 \NA{} utilizes huge pages differently. Ideally, if huge pages are utilized for private objects, then there are no hot page effect and page-level false sharing. Also, if huge pages are only utilized for big objects or all small objects in a huge page will be allocated, then the memory footprint can be minimized. \NA{} takes these consideration into account. Each per-node heap is further divided into two parts as illustrated in Fig.~\ref{fig:overview}: small objects will be allocated from the first half and will be allocated using small pages, while big objects will be allocated from the second half with huge pages (2MB). When a big object is utilized for small objects, only frequently-allocated small objects can utilize such an object. We believe that our design balances the performance and memory consumption.   
 
-\subsection{Efficient Object Migration} 
+\subsection{Efficient Objects Migration} 
 
 \NM{} maintains per-thread heap and per-node heap in order to reduce the synchronization overhead, which indicates the necessity of moving objects between different heaps. All threads bounded to the same node will share the per-node heap. When a per-thread list has too many objects, some of them should be moved to the per-node list so that other threads could re-utilize these freed objects, reducing the memory consumption. Similarly, each per-thread list may need to obtain freed objects from its per-node heap, when a thread is running out the memory. These frequent migrations require an efficient mechanism. Currently, \NM{} utilizes singly link lists to manage freed objects, imposing an additional challenge of migrating objects efficiently. 
 
@@ -107,12 +110,12 @@ In order to avoid the bottleneck of the per-node heap, \NM{} introduces a circul
 
 \subsection{Other Mechanisms}
 
-\paragraph{Node-local Metadata:} \NM{} guarantees that all of the metadata is always allocated in the same node, based on its task binding as described in Section~\ref{sec:taskassign}. Such metadata includes the PerMBInfo, per-node and per-thread freelists for different size classes, and freelists for big objects. \NM{} utilizes the \texttt{mbind} system call to bind a range of memory to a specific node.  
+\paragraph{Node-Local Metadata:} \NM{} guarantees that all of the metadata is always allocated in the same node, based on its task binding as described in Section~\ref{sec:taskassign}. Such metadata includes the PerMBInfo, per-node and per-thread freelists for different size classes, and freelists for big objects. \NM{} utilizes the \texttt{mbind} system call to bind a range of memory to a specific node.  
 
 \paragraph{Memory Reutilization:} Some applications may create new threads after some threads have exited. \NM{} re-utilizes the memory for these exited threads. Basically, \NM{} introduces a thread index for each thread, which is utilized to index the corresponding per-thread heap.  \NM{} intercepts thread joins and cancels so that it can assign the indexes of exited threads for newly-created threads, and re-utilize their heaps correspondingly.  
 
 
-\paragraph{MiniBag Design to Reduce Memory Consumption:} During the development, we noticed that it excessive memory consumption  can be imposed when the OS utilizes huge pages by default. In order to avoid this issue, we propose the combination of per-node heap and per-thread cache. In order to reduce the contention, \NM{} will obtain multiple objects at a time from the per-node heap. 
+\paragraph{MiniBag Design to Reduce Memory Consumption:} During the development, we noticed that excessive memory consumption  can be imposed when the OS utilizes huge pages by default, such as Machine B. In order to avoid this issue, we propose the combination of per-node heap and per-thread cache. \todo{In order to reduce the contention, \NM{} will obtain multiple objects at a time from the per-node heap. }
 
  
 %https://queue.acm.org/detail.cfm?id=2852078
